--- a/.hintrc
+++ b/.hintrc
@@ -7,5 +7,13 @@
     "not ie 11",
     "not and_ff <= 113",
     "not firefox <= 114"
-  ]
+  ],
+  "hints": {
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ]
+  }
 }
